--- a/the-gossip-project/app/assets/stylesheets/application.css
+++ b/the-gossip-project/app/assets/stylesheets/application.css
@@ -16,3 +16,11 @@
 p {
     color: blue;
 }
+@media (min-width: 75em) {
+    .card-columns {
+        -webkit-column-count: 5;
+        -moz-column-count: 5;
+        column-count: 5;
+    }
+}
+
