--- a/the-gossip-project/app/views/layouts/application.html.erb
+++ b/the-gossip-project/app/views/layouts/application.html.erb
@@ -17,9 +17,13 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-  year_month_day_path(@year.id, @month.id, @day.id)
     <div class="navbar-nav">
-    <%= link_to "Home", welcome_path(params[:first_name]), :class => "nav-item nav-link active" %>
+    <%= link_to "Home", root_path, :class => "nav-item nav-link active" %>
+    <% if params[:first_name] == nil %>
+    <%= link_to "Welcome", welcome_path(params[:first_name] = "Visiteur"), :class => "nav-item nav-link " %>
+    <% else %>
+    <%= link_to "Welcome", welcome_path(params[:first_name]), :class => "nav-item nav-link" %>
+    <% end %>
       <span class="sr-only">(current)</span>     
       <%= link_to "Team", team_path, :class => "nav-item nav-link" %>
       <%= link_to "Contact", contact_path, :class => "nav-item nav-link" %>
