--- a/the-gossip-project/app/views/gossips/new.html.erb
+++ b/the-gossip-project/app/views/gossips/new.html.erb
@@ -8,7 +8,7 @@
     <input type="submit" value="envoyez">
     </form>
 -->
- <!-- <% if @gossip.errors.any? %>
+  <% if @gossip.errors.any? %>
     <div class="alert alert-danger" role="alert">
         <p>Nous n'avons pas réussi à créer le potin pour la(les) raison(s) suivante(s) :</p>
         <ul>
@@ -17,10 +17,10 @@
         <% end %>
         </ul>
     </div>
-<% end %>  -->
+<% end %>
 
 <div class="container">
-<%= form_tag url_for(action: "create"), method: "post" do %>
+<%= form_tag url_for(action: "create"), method: "post" do %><!-- il fut changer create en gossips_path pour la convention mais ne fonctionne pas-->
 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 
 
