--- a/the-gossip-project/app/views/layouts/application.html.erb
+++ b/the-gossip-project/app/views/layouts/application.html.erb
@@ -4,7 +4,10 @@
     <title>TheGossipProject</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="crossorigin="anonymous"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -12,25 +15,49 @@
 
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-    <%= link_to "Home", root_path, :class => "nav-item nav-link active" %>
-    <% if params[:first_name] == nil %>
-    <%= link_to "Welcome", welcome_path(params[:first_name] = "Visiteur"), :class => "nav-item nav-link " %>
-    <% else %>
-    <%= link_to "Welcome", welcome_path(params[:first_name]), :class => "nav-item nav-link" %>
-    <% end %>
-      <span class="sr-only">(current)</span>     
-      <%= link_to "Team", team_path, :class => "nav-item nav-link" %>
-      <%= link_to "Contact", contact_path, :class => "nav-item nav-link" %>
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse d-flex " id="navbarNavDropdown">
+
+        
+          
+            <%= link_to "Home", root_path, :class => " nav-item nav-link" %>
+
+
+            <% if params[:first_name] == nil %>
+            <%= link_to "Welcome", welcome_path(params[:first_name] = "Visiteur"), :class => "nav-item nav-link " %>
+            <% else %>
+            <%= link_to "Welcome", welcome_path(params[:first_name]), :class => "nav-item nav-link" %>
+            <% end %>
+            <span class="sr-only">(current)</span>    
+      
+
+            <%= link_to "Team", team_path, :class => "nav-item nav-link" %>
+
+
+
+            <%= link_to "Contact", contact_path, :class => "nav-item nav-link" %>
+
+
+            <%= link_to "Inscription", new_session_path, :class => "nav-item nav-link" %> <!-- ajouter routes vers le log-->
+
+          <div class="dropdown show ml-auto">
+            <a class=" nav-link dropdown-toggle  ml-auto" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              User
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <% if current_user == nil %>
+              <%= link_to "Connexion", new_session_path, :class => "dropdown-item" %> <!-- ajouter routes vers le log-->
+              <% else %>
+              <%= link_to "Dashboard", new_session_path, :class => "dropdown-item" %> <!-- ajouter routes vers le log-->
+              <%= link_to "Se déconnecter", session_path(session.id), method: :delete, :class => "dropdown-item" %>
+              <% end %>
+            </div>
+          </div>
     </div>
-  </div>
-</nav>
-    <%= yield %>
-    
+  </nav>
+   <%= yield %>
   </body>
 </html>
