--- a/the-gossip-project/app/views/static_pages/index.html.erb
+++ b/the-gossip-project/app/views/static_pages/index.html.erb
@@ -1,6 +1,8 @@
 <h1>StaticPages#index</h1>
 <p>Find me in app/views/static_pages/index.html.erb</p>
 
+
+
 <% if flash[:success]%>
 <div class="alert alert-success" role="alert">
   <%= flash[:success]%>
@@ -23,7 +25,9 @@
             <img class="card-img-top" src="" alt="     image   ">
             <div class="card-body text-<%= @rand_color%>">
             <h5 class="card-title"><%=  gossip.title %></h5>
-            <p class="card-text"><%= link_to 'Article', gossips_path(gossip.id), :class => "btn btn-#{@color}"%></p>
+
+            <p class="card-text"><%= link_to 'Article', gossip_path(gossip.id), :class => "btn btn-#{@color}"%></p>
+            
             </div>
             <div class="card-footer border-<%= @color%>">
             <small class="text-<%= @color%>"><%=  gossip.updated_at %></small>
