--- a/the-gossip-project/app/views/users/new.html.erb
+++ b/the-gossip-project/app/views/users/new.html.erb
@@ -1,6 +1,14 @@
 <h1>Users#new</h1>
 <p>Find me in app/views/users/new.html.erb</p>
 
+
+
+<% if flash[:success]%>
+<div class="alert alert-success" role="alert">
+  <%= flash[:success]%>
+</div>
+<% end %>
+
 <% if flash[:danger]%>
 <div class="alert alert-danger" role="alert">
   <%= flash[:danger]%>
@@ -16,7 +24,7 @@
 <!-- Ajouter une un contour rouge pour signaler un mauvais pseudo  ou mot de passse-->
 <div class="col-sm-10">
 # <%= label_tag 'Title' %>
-# <%= text_field_tag 'title', @email%>
+# <%= text_field_tag 'email', @email%>
 </div>
 
 <div class="col-sm-10">
